<resources>
    <string name="app_name">Degas</string>

    <string name="add_products_activity_new_products_count">Total de produtos novos: %1$d </string>
    <string name="add_products_activity_updated_products_count">Total de produtos atualizados: %1$d </string>
    <string name="delete">Deletar</string>
    <string name="newClientDialogTitle">Cadastrar novo cliente</string>
    <string name="newClientDialogMessage">Como deseja adicionar</string>
    <string name="newClientDialogImport">Importar arquivo</string>
    <string name="newClientDialogManual">Cadastro Manual</string>
    <string name="cancel">Cancelar</string>
    <string name="deleteClientDialogTitle">Deletar cliente?</string>
    <string name="deleteAllDialogMessage">Deseja deletar todas as PEÇAS e PEDIDOS cadastrados? Essa ação não pode ser desfeita</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="atention">ATENÇÃO</string>
    <string name="ok">OK</string>
    <string name="importProductsButton">Importar produtos</string>
    <string name="deleteAllButton">Deletar tudo</string>
    <string name="deliveryDateLabel">Prazo de entrega</string>
    <string name="paymentConditionLabel">Condição de pagamento</string>
    <string name="send">Enviar</string>
    <string name="clients">Clientes</string>
    <string name="colections">Coleções</string>
    <string name="orders">Pedidos</string>
    <string name="totalValueLabel">Valor Total</string>
    <string name="amountTotalLabel">Quantidade de peças</string>
    <string name="code">Codigo</string>
    <string name="colorLabel">Cor</string>
    <string name="amountLabel">Quantidade</string>
    <string name="zipcode">CEP</string>
    <string name="streetName">Nome da rua</string>
    <string name="district">Bairro</string>
    <string name="city">Cidade</string>
    <string name="state">Estado</string>
    <string name="continueButton">Continuar</string>
    <string name="contactName">Nome do contato</string>
    <string name="email">E-mail</string>
    <string name="phone">Telefone</string>
    <string name="cellPhone">Celular</string>
    <string name="documentLabel">CPF/CNPJ</string>
    <string name="stateInscription">Inscrição estadual</string>
    <string name="oficialName">Razão Social</string>
    <string name="commonName">Nome Fantasia</string>
    <string name="savePdf">Salvar PDF</string>
</resources>
